--- a/src/MSHU.CarWash.UWP/Views/About.xaml
+++ b/src/MSHU.CarWash.UWP/Views/About.xaml
@@ -241,44 +241,47 @@
                 <StaticResource ResourceKey="MyPivotStyle"/>
             </Pivot.Style>
             <PivotItem Header="About" >
-                <RelativePanel>
-                    <StackPanel Name="MyStack" RelativePanel.AlignTopWithPanel="True">
-                        <TextBlock Text="CarWash Universal App" Style="{ThemeResource SubheaderTextBlockStyle}"/>
-                        <TextBlock Style="{ThemeResource BodyTextBlockStyle}" TextAlignment="Justify">
-                        <LineBreak/>
-                        CarWash Universal Application is intended to help Microsoft employees working in the Hungarian subsidiaries to reserve and to order car washing services from different service providers. 
-                        Users are able to register car washing on every workday until free slots are available.
-                        The application can run on every platform where Windows 10 is already deployed. Amongst others Windows 10 desktop editions, Windows 10 Mobile, Xbox One and also Windows 10 IoT editions.
-                        </TextBlock>
-                        <TextBlock></TextBlock>
-                        <TextBlock Style="{ThemeResource BaseTextBlockStyle}" TextWrapping="Wrap">
-                        	<Run Text="Authors:"/>
-                        	<LineBreak/>
-                        	<Run Text="Ákos Szegő - "/>
-                        	<Hyperlink NavigateUri="mailto:akos.szego@microsoft.com">
-                        		<Run Text="akos.szego@microsoft.com"/>
-                        	</Hyperlink>
-                        	<Run Text=", Tamás Veiland - "/>
-                        	<Hyperlink NavigateUri="mailto:tamas.veiland@microsoft.com">
-                        		<Run Text="tamas.veiland@microsoft.com"/>
-                        	</Hyperlink>
-                        	<Run Text=", József Vadkerti - "/>
-                        	<Hyperlink NavigateUri="mailto:jozsef.vadkerti@microsoft.com">
-                        		<Run Text="jozsef.vadkerti@microsoft.com"/>
-                        	</Hyperlink>
-                        </TextBlock>
-                        <TextBlock><LineBreak></LineBreak><LineBreak></LineBreak></TextBlock>
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Margin="5"
-                                       RelativePanel.Below="MyStack">
-                    <Hyperlink NavigateUri="https://www.microsoft.com/en-us/microsoftservices/premier_support_developers.aspx"> 
-                        Premier Support for Developers
-                    </Hyperlink>
-                        </TextBlock>
-                    </StackPanel>
-                    <TextBlock Text="{Binding PackageInformation}" Style="{ThemeResource CaptionTextBlockStyle}" Margin="5"
-                       RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True">
-                    </TextBlock>
-                </RelativePanel>
+                <ScrollViewer HorizontalScrollMode="Disabled">
+                    <RelativePanel Margin="4,0">
+                        <StackPanel x:Name="MyStack" RelativePanel.AlignTopWithPanel="True">
+                            <TextBlock Text="CarWash Universal App" Style="{ThemeResource SubheaderTextBlockStyle}"/>
+                            <TextBlock Style="{ThemeResource BodyTextBlockStyle}" TextAlignment="Justify">
+            					<LineBreak/>
+            					<Run Text=" CarWash Universal Application is intended to help Microsoft employees working in the Hungarian subsidiaries to reserve and to order car washing services from different service providers. Users are able to register car washing on every workday until free slots are available. The application can run on every platform where Windows 10 is already deployed. Amongst others Windows 10 desktop editions, Windows 10 Mobile, Xbox One and also Windows 10 IoT editions."/>
+                            </TextBlock>
+                            <TextBlock/>
+                            <TextBlock Style="{ThemeResource BaseTextBlockStyle}" TextWrapping="Wrap">
+                            	<Run Text="Authors:"/>
+                            	<LineBreak/>
+                            	<Run Text="Ákos Szegő - "/>
+                            	<Hyperlink NavigateUri="mailto:akos.szego@microsoft.com">
+                            		<Run Text="akos.szego@microsoft.com"/>
+                            	</Hyperlink>
+                            	<Run/>
+                            	<LineBreak/>
+                            	<Run Text="Tamás Veiland - "/>
+                            	<Hyperlink NavigateUri="mailto:tamas.veiland@microsoft.com">
+                            		<Run Text="tamas.veiland@microsoft.com"/>
+                            	</Hyperlink>
+                            	<Run/>
+                            	<LineBreak/>
+                            	<Run Text="József Vadkerti - "/>
+                            	<Hyperlink NavigateUri="mailto:jozsef.vadkerti@microsoft.com">
+                            		<Run Text="jozsef.vadkerti@microsoft.com"/>
+                            	</Hyperlink>
+                            </TextBlock>
+                            <TextBlock><LineBreak/><LineBreak/></TextBlock>
+                            <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Margin="5"
+            					RelativePanel.Below="MyStack">
+            					<Hyperlink NavigateUri="https://www.microsoft.com/en-us/microsoftservices/premier_support_developers.aspx"> 
+            						<Run Text="Premier Support for Developers"/>
+            					</Hyperlink>
+                            </TextBlock>
+                        </StackPanel>
+                        <TextBlock Text="{Binding PackageInformation}" Style="{ThemeResource CaptionTextBlockStyle}" Margin="5"
+            				RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True"/>
+                    </RelativePanel>
+                </ScrollViewer>
             </PivotItem>
             <PivotItem Header="Privacy statement">
                 <WebView Source="http://www.microsoft.com/en-us/privacystatement" />
