--- a/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
+++ b/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
@@ -1,87 +1,131 @@
-﻿<UserControl
-    x:Class="MSHU.CarWash.UWP.Controls.ReservationDetailsView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MSHU.CarWash.UWP.Controls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400"
-    MinWidth="350"
-    x:Name="viewControl"
-    >
+﻿<UserControl x:Class="MSHU.CarWash.UWP.Controls.ReservationDetailsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:MSHU.CarWash.UWP.Controls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="400"
+             MinWidth="350"
+             x:Name="viewControl">
 
     <UserControl.Resources>
         <Style TargetType="TextBlock">
-            <Setter Property="Margin" Value="8,12,8,12" />
+            <Setter Property="Margin"
+                    Value="8,12,8,12" />
         </Style>
 
         <Style TargetType="TextBox">
-            <Setter Property="Margin" Value="8,4,8,4" />
+            <Setter Property="Margin"
+                    Value="8,4,8,4" />
         </Style>
     </UserControl.Resources>
 
     <RelativePanel Margin="8">
         <VisualStateManager.VisualStateGroups>
 
-        <VisualStateGroup x:Name="ResponsiveUI">
-            <VisualState x:Name="VisualStateMin640">
-                <VisualState.StateTriggers>
-                    <AdaptiveTrigger MinWindowWidth="400"/>
-                </VisualState.StateTriggers>
+            <VisualStateGroup x:Name="ResponsiveUI">
+                <VisualState x:Name="VisualStateMin640">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="400" />
+                    </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="PlateBox.(RelativePanel.AlignRightWithPanel)" Value="True"/>
-                        <Setter Target="PlateBox.(RelativePanel.AlignHorizontalCenterWithPanel)" Value="False"/>
-                        <Setter Target="PlateBox.(RelativePanel.AlignVerticalCenterWith)" Value="PlateText"/>
-                        <Setter Target="ServiceBox.(RelativePanel.AlignVerticalCenterWith)" Value="ServiceText"/>
-                        <Setter Target="ServiceBox.(RelativePanel.AlignRightWithPanel)" Value="True"/>
-                        <Setter Target="ServiceBox.(RelativePanel.AlignHorizontalCenterWithPanel)" Value="False"/>
-                        <Setter Target="CommentBox.(RelativePanel.AlignRightWithPanel)" Value="True"/>
-                        <Setter Target="CommentBox.(RelativePanel.AlignVerticalCenterWith)" Value="CommentText"/>
+                        <Setter Target="PlateBox.(RelativePanel.RightOf)"
+                                Value="PlateText" />
+                        <Setter Target="PlateBox.(RelativePanel.AlignVerticalCenterWith)"
+                                Value="PlateText" />
+                        <Setter Target="ServiceBox.(RelativePanel.AlignVerticalCenterWith)"
+                                Value="ServiceText" />
+                        <Setter Target="ServiceBox.(RelativePanel.RightOf)"
+                                Value="PlateText" />
+                        <Setter Target="CommentBox.(RelativePanel.RightOf)"
+                                Value="PlateText" />
+                        <Setter Target="CommentBox.(RelativePanel.AlignVerticalCenterWith)"
+                                Value="CommentText" />
                     </VisualState.Setters>
                 </VisualState>
-            <VisualState x:Name="VisualStateMin0">
-                <VisualState.Setters>
-                        <Setter Target="PlateBox.(RelativePanel.AlignRightWithPanel)" Value="False"/>
-                        <Setter Target="PlateBox.(RelativePanel.AlignHorizontalCenterWithPanel)" Value="True"/>
-                        <Setter Target="PlateBox.(RelativePanel.Below)" Value="PlateText"/>
-                        <Setter Target="ServiceBox.(RelativePanel.AlignVerticalCenterWith)" Value=""/>
-                        <Setter Target="ServiceBox.(RelativePanel.AlignRightWithPanel)" Value="False"/>
-                        <Setter Target="ServiceBox.(RelativePanel.AlignHorizontalCenterWithPanel)" Value="True"/>
-                        <Setter Target="ServiceBox.(RelativePanel.Below)" Value="ServiceText"/>
-                        <Setter Target="CommentBox.(RelativePanel.AlignRightWithPanel)" Value="False"/>
-                        <Setter Target="CommentBox.(RelativePanel.AlignHorizontalCenterWithPanel)" Value="True"/>
-                        <Setter Target="CommentBox.(RelativePanel.Below)" Value="CommentText"/>
-                        <Setter Target="viewControl.(FrameworkElement.MinWidth)" Value="150"/>
+                <VisualState x:Name="VisualStateMin0">
+                    <VisualState.Setters>
+                        <Setter Target="PlateBox.(RelativePanel.AlignLeftWithPanel)"
+                                Value="True" />
+                        <Setter Target="PlateBox.(RelativePanel.Below)"
+                                Value="PlateText" />
+                        <Setter Target="ServiceBox.(RelativePanel.AlignLeftWithPanel)"
+                                Value="True" />
+                        <Setter Target="ServiceBox.(RelativePanel.Below)"
+                                Value="ServiceText" />
+                        <Setter Target="CommentBox.(RelativePanel.AlignLeftWithPanel)"
+                                Value="True" />
+                        <Setter Target="CommentBox.(RelativePanel.Below)"
+                                Value="CommentText" />
+                        <Setter Target="viewControl.(FrameworkElement.MinWidth)"
+                                Value="150" />
                     </VisualState.Setters>
-                <VisualState.StateTriggers>
-                    <AdaptiveTrigger MinWindowWidth="1"/>
-                </VisualState.StateTriggers>
-            </VisualState>
-        </VisualStateGroup>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-        <TextBlock x:Name="PlateText" Text="Plate number:"/>
-        <TextBox x:Name="PlateBox" Text="{Binding CurrentReservation.VehiclePlateNumber, Mode=TwoWay}" RelativePanel.AlignRightWithPanel="True" MinWidth="160"/>
-        <TextBlock x:Name="ServiceText" Text="Selected service:" RelativePanel.Below="PlateBox" />
-        <ComboBox x:Name="ServiceBox" ItemsSource="{Binding ServicesSource.View, Mode=TwoWay}" Margin="8,4,8,4" MinWidth="160"
-                  DisplayMemberPath="ServiceName" SelectedValuePath="ServiceId" RelativePanel.AlignRightWithPanel="True" />
-        <TextBlock x:Name="CommentText" Text="Comment:" RelativePanel.Below="ServiceBox" />
-        <TextBox x:Name="CommentBox" Text="{Binding CurrentReservation.Comment, Mode=TwoWay}" RelativePanel.AlignRightWithPanel="True"
-                 MinWidth="160"/>
-        <RelativePanel RelativePanel.Below="CommentBox" RelativePanel.AlignHorizontalCenterWithPanel="True" >
-            <Button Content="Cancel" x:Name="CancelButton" Command="{Binding CancelCommand, ElementName=viewControl}"
-                    RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"
-                     Style="{StaticResource CWButtonStyle}"/>
-            <Button Content="Save" x:Name="SaveButton" RelativePanel.LeftOf="CancelButton" 
-                    Margin="0,4,8,4" Padding="32,4,32,4"
-                    Command="{Binding SaveCommand, ElementName=viewControl}" Style="{StaticResource CWButtonStyle}"/>
-            <Button Content="Delete" x:Name="DeleteButton"
-                    Command="{Binding DeleteCommand, ElementName=viewControl}"  Style="{StaticResource CWButtonStyle}"
-                    RelativePanel.AlignRightWithPanel="True" Margin="0,4,8,4" Padding="32,4,32,4"/>
-            <Button Content="Update" x:Name="UpdateButton" RelativePanel.LeftOf="DeleteButton" 
-                    Margin="0,4,8,4" Padding="32,4,32,4"
-                    Command="{Binding UpdateCommand, ElementName=viewControl}" Style="{StaticResource CWButtonStyle}"/>
+        <TextBlock x:Name="PlateText"
+                   Text="Plate number:"
+                   MinWidth="120" />
+        <TextBox x:Name="PlateBox"
+                 Text="{Binding CurrentReservation.VehiclePlateNumber, Mode=TwoWay}"
+                 MinWidth="160"
+                 RelativePanel.AlignLeftWith=""
+                 RelativePanel.RightOf="PlateText" />
+        <TextBlock x:Name="ServiceText"
+                   Text="Selected service:"
+                   RelativePanel.Below="PlateBox"
+                   MinWidth="120" />
+        <ComboBox x:Name="ServiceBox"
+                  ItemsSource="{Binding ServicesSource.View, Mode=TwoWay}"
+                  Margin="8,4,0,0"
+                  MinWidth="230"
+                  DisplayMemberPath="ServiceName"
+                  SelectedValuePath="ServiceId"
+                  RelativePanel.RightOf="PlateText" />
+        <TextBlock x:Name="CommentText"
+                   Text="Comment:"
+                   RelativePanel.Below="ServiceBox"
+                   MinWidth="120" />
+        <TextBox x:Name="CommentBox"
+                 Text="{Binding CurrentReservation.Comment, Mode=TwoWay}"
+                 RelativePanel.AlignRightWithPanel="True"
+                 MinWidth="160"
+                 RelativePanel.RightOf="PlateText" />
+        <RelativePanel RelativePanel.Below="CommentBox"
+                       RelativePanel.AlignHorizontalCenterWithPanel="True">
+            <Button Content="Cancel"
+                    x:Name="CancelButton"
+                    Command="{Binding CancelCommand, ElementName=viewControl}"
+                    RelativePanel.AlignRightWithPanel="True"
+                    Margin="0,4,8,4"
+                    Padding="32,4,32,4"
+                    Style="{StaticResource CWButtonStyle}" />
+            <Button Content="Save"
+                    x:Name="SaveButton"
+                    RelativePanel.LeftOf="CancelButton"
+                    Margin="0,4,8,4"
+                    Padding="32,4,32,4"
+                    Command="{Binding SaveCommand, ElementName=viewControl}"
+                    Style="{StaticResource CWButtonStyle}" />
+            <Button Content="Delete"
+                    x:Name="DeleteButton"
+                    Command="{Binding DeleteCommand, ElementName=viewControl}"
+                    Style="{StaticResource CWButtonStyle}"
+                    RelativePanel.AlignRightWithPanel="True"
+                    Margin="0,4,8,4"
+                    Padding="32,4,32,4" />
+            <Button Content="Update"
+                    x:Name="UpdateButton"
+                    RelativePanel.LeftOf="DeleteButton"
+                    Margin="0,4,8,4"
+                    Padding="32,4,32,4"
+                    Command="{Binding UpdateCommand, ElementName=viewControl}"
+                    Style="{StaticResource CWButtonStyle}" />
         </RelativePanel>
     </RelativePanel>
 </UserControl>
